--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/DeepLinkModule/javasource/system/
 src/DeepLinkModule/javasource/test/proxies/
 src/DeepLinkModule/[App Store] Deeplink.mpr.lock
 *.lock
+.DS_Store
