Add source option back
Source option is required

--- a/.github/workflows/sigrid-publish.yml
+++ b/.github/workflows/sigrid-publish.yml
@@ -15,4 +15,4 @@ jobs:
       - name: "Run Sigrid CI" 
         env:
           SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
-        run: "./sigridci/sigridci/sigridci.py --customer mendix --system deeplink --publish"
+        run: "./sigridci/sigridci/sigridci.py --customer mendix --system deeplink --source . --publish"
