--- a/sigrid.yaml
+++ b/sigrid.yaml
@@ -7,6 +7,12 @@ exclude:
     - ".*/src/DeepLinkModule/javasource/mendixsso/.*"
     - ".*/src/DeepLinkModule/javasource/test/.*"
     - ".*/src/DeepLinkModule/userlib/.*"
+    - ".*/src/DeepLinkModule/theme/.*"
+    - ".*/src/DeepLinkModule/theme_atlas2/.*"
+    - ".*/src/DeepLinkModule/theme-cache/.*"
+    - ".*/src/DeepLinkModule/themesource/.*"
+    - ".*/src/DeepLinkModule/widgets/.*"
+    - ".*/src/DeepLinkModule/resources/.*"
 component_base_dirs:
   - "src/DeepLinkModule"
 thirdpartyfindings:
