--- a/.github/workflows/sigrid-pullrequest.yml
+++ b/.github/workflows/sigrid-pullrequest.yml
@@ -12,7 +12,7 @@ jobs:
       - name: "Run Sigrid CI" 
         env:
           SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
-        run: "./sigridci/sigridci/sigridci.py --customer mendix --system deeplink --source ."
+        run: "./sigridci/sigridci/sigridci.py --customer mendix --system deeplink --source . --targetquality 3"
       - name: "Save Sigrid CI results"
         if: always()
         uses: actions/upload-artifact@v2
