--- a/.github/workflows/sigrid-publish.yml
+++ b/.github/workflows/sigrid-publish.yml
@@ -3,16 +3,18 @@ on:
   push:
     branches:
       - "master"
-
 jobs:
-  sigridci:
+  SigridCI-for-QSM:
     runs-on: ubuntu-latest
+    container: softwareimprovementgroup/mendixpreprocessor:latest
+    env:
+      MENDIX_TOKEN: "${{ secrets.MENDIX_TOKEN }}"
+      SIGRID_CI_CUSTOMER: 'mendix'
+      SIGRID_CI_SYSTEM: 'deeplink'
+      SIGRID_CI_PUBLISH: 'publish'
+      SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-      - name: Download Sigrid CI
-        run: "git clone https://github.com/Software-Improvement-Group/sigridci.git sigridci"
-      - name: "Run Sigrid CI" 
-        env:
-          SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
-        run: "./sigridci/sigridci/sigridci.py --customer mendix --system deeplink --source . --publish --targetquality 3"
+      - run: |
+          /usr/local/bin/entrypoint.sh
