--- a/.github/workflows/sigrid-pullrequest.yml
+++ b/.github/workflows/sigrid-pullrequest.yml
@@ -2,27 +2,18 @@ name: sigrid-pullrequest
 on: [pull_request]
 
 jobs:
-  sigridci:
+  SigridCI-for-QSM:
     runs-on: ubuntu-latest
+    container: softwareimprovementgroup/mendixpreprocessor:latest
+    env:
+      CI_PROJECT_DIR: "."
+      MENDIX_TOKEN: "${{ secrets.MENDIX_TOKEN }}"
+      SIGRID_CI_CUSTOMER: 'mendix'
+      SIGRID_CI_SYSTEM: 'deeplink'
+      SIGRID_CI_TARGET_QUALITY: '3.0'
+      SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-      - name: Download Sigrid CI
-        run: "git clone https://github.com/Software-Improvement-Group/sigridci.git sigridci"
-      - name: "Run Sigrid CI" 
-        env:
-          SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
-        run: "./sigridci/sigridci/sigridci.py --customer mendix --system deeplink --source . --targetquality 3"
-      - name: "Save Sigrid CI results"
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          path: "sigrid-ci-output/**"
-          retention-days: 7
-          if-no-files-found: ignore
-      - name: "Sigrid pull request feedback"
-        uses: mshick/add-pr-comment@v2
-        if: always()
-        with:
-          message-id: sigrid
-          message-path: sigrid-ci-output/feedback.md
+      - run: |
+          /usr/local/bin/entrypoint.sh
